--- a/sass/layout/_header.sass
+++ b/sass/layout/_header.sass
@@ -40,6 +40,10 @@
         display: block
         line-height: 1
       span
+        max-width: 6em
+        white-space: nowrap
+        overflow: hidden
+        text-overflow: ellipsis
         color: $gray-medium
 
 
